[project]
name = "up-tempest"
version = "0.1.0"
description = "Temporal Planner via Encoding into Satisfiability Testing"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    {name = "FBK PSO Unit", email = "pso-tools@fbk.eu"}
]
urls = { "Homepage" = "https://github.com/fbk-pso/tempest" }
dependencies = [
    "pysmt>=0.9.7.dev333",
    "z3-solver==4.15.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "mypy==2.3.0",
    "ruff==0.15.22",
    "pre-commit==4.6.0",
    "unified-planning @ git+https://github.com/aiplan4eu/unified-planning.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tempest"]

[tool.hatch.build.targets.sdist]
include = ["src/tempest", "README.md", "LICENSE"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF", "PERF", "PIE"]
ignore = [
    "E501",  # line-too-long: handled by the formatter; the rest are unsplittable
    "E731",  # lambda-assignment: the small inline lambdas here read fine
]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports the package API, so imports look "unused" (F401).
"__init__.py" = ["F401"]
# The encoders memoize symbol/formula construction on purpose: cache lifetime
# equals encoder lifetime, and the memoization is load-bearing (e.g.
# SymbolEncoder.chain_var bumps a counter, so a re-call must return the
# memoized symbol, not build a new one). B019's leak warning doesn't apply.
"src/tempest/encoders/*" = ["B019"]

[tool.ruff.format]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
disable_error_code = ["no-redef"]
files = ["src/tempest", "tests", "ci"]

[[tool.mypy.overrides]]
module = ["unified_planning.*", "pysmt.*"]
ignore_missing_imports = true

# Benchmark problem modules; the tests put benchmarks/ on sys.path themselves.
[[tool.mypy.overrides]]
module = ["test_cases.*"]
ignore_missing_imports = true
